--- Added bold titles to accordions

--- a/templates/educational-material.html
+++ b/templates/educational-material.html
@@ -86,7 +86,7 @@
           <div uib-accordion-group is-open="statusA.open">
             <uib-accordion-heading>
               <div>
-                Titles <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusA.open, 'glyphicon-chevron-right': !statusA.open}"></i>
+                <strong>Titles </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusA.open, 'glyphicon-chevron-right': !statusA.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
@@ -112,7 +112,7 @@
           <div uib-accordion-group is-open="statusB.open" ng-show="!eduMat.tocs.length">
             <uib-accordion-heading>
               <div>
-                URLs <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusB.open, 'glyphicon-chevron-right': !statusB.open}"></i>
+                <strong>URLs</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusB.open, 'glyphicon-chevron-right': !statusB.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
@@ -138,7 +138,7 @@
           <div uib-accordion-group is-open="statusC" ng-hide="eduMat.url_EN || eduMat.url_FR">
             <uib-accordion-heading>
               <div>
-                Table of Contents <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusC, 'glyphicon-chevron-right': !statusC}"></i>
+                <strong>Table of Contents</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusC, 'glyphicon-chevron-right': !statusC}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
@@ -184,7 +184,7 @@
           <div uib-accordion-group is-open="statusH.open">
             <uib-accordion-heading>
               <div>
-                Supporting PDF Document<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusH.open, 'glyphicon-chevron-right': !statusH.open}"></i>
+                <strong>Supporting PDF Document</strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusH.open, 'glyphicon-chevron-right': !statusH.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
@@ -210,7 +210,7 @@
           <div uib-accordion-group is-open="statusI.open"> 
             <uib-accordion-heading>
               <div>
-                Filter Demographics <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusD.open, 'glyphicon-chevron-right': !statusD.open}"></i>
+                <strong>Filter Demographics</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusD.open, 'glyphicon-chevron-right': !statusD.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
@@ -254,7 +254,7 @@
           <div uib-accordion-group is-open="statusD.open">
             <uib-accordion-heading>
               <div>
-                Filter Terms <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusD.open, 'glyphicon-chevron-right': !statusD.open}"></i>
+                <strong>Filter Terms </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusD.open, 'glyphicon-chevron-right': !statusD.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
@@ -291,7 +291,7 @@
           <div uib-accordion-group is-open="statusE.open">
             <uib-accordion-heading>
               <div>
-                Filter Diagnoses <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusE.open, 'glyphicon-chevron-right': !statusE.open}"></i>
+                <strong>Filter Diagnoses</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusE.open, 'glyphicon-chevron-right': !statusE.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
@@ -328,7 +328,7 @@
           <div uib-accordion-group is-open="statusF.open">
             <uib-accordion-heading>
               <div>
-                Filter Doctors <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusF.open, 'glyphicon-chevron-right': !statusF.open}"></i>
+                <strong>Filter Doctors</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusF.open, 'glyphicon-chevron-right': !statusF.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
@@ -365,7 +365,7 @@
           <div uib-accordion-group is-open="statusG.open">
             <uib-accordion-heading>
               <div>
-                Filter Resources <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusG.open, 'glyphicon-chevron-right': !statusG.open}"></i>
+                <strong>Filter Resources</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusG.open, 'glyphicon-chevron-right': !statusG.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
