--- a/templates/notification.html
+++ b/templates/notification.html
@@ -81,7 +81,7 @@
           <div uib-accordion-group is-open="statusA.open">
             <uib-accordion-heading>
               <div>
-                Titles <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusA.open, 'glyphicon-chevron-right': !statusA.open}"></i>
+                <strong>Titles</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusA.open, 'glyphicon-chevron-right': !statusA.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
@@ -107,7 +107,7 @@
           <div uib-accordion-group is-open="statusB.open">
             <uib-accordion-heading>
               <div>
-                Messages <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusB.open, 'glyphicon-chevron-right': !statusB.open}"></i>
+                <strong>Messages</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusB.open, 'glyphicon-chevron-right': !statusB.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info" style="word-wrap:break-word">
