--- a/templates/email.html
+++ b/templates/email.html
@@ -81,25 +81,25 @@
           <div uib-accordion-group is-open="statusA.open">
             <uib-accordion-heading>
               <div>
-                Titles <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusA.open, 'glyphicon-chevron-right': !statusA.open}"></i>
+                <strong>Subjects</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusA.open, 'glyphicon-chevron-right': !statusA.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
-              <h4>Current Email Titles (EN / FR): {{email.name_EN}} / {{email.name_FR}}</h4>
-              To change the current title(s), enter the new title(s) in the text box(es) below.
+              <h4>Current Email Subjects (EN / FR): {{email.subject_EN}} / {{email.subject_FR}}</h4>
+              To change the current subject(s), enter the new subject(s) in the text box(es) below.
             </div>
             <div class="row">
               <div class="col-md-5">
                 <div class="input-group">
                   <span class="input-group-addon">EN</span>
-                  <input class="form-control" type="text" ng-model="email.name_EN" ng-change="setChangesMade()" placeholder="English Title" required="required">
+                  <input class="form-control" type="text" ng-model="email.subject_EN" ng-change="setChangesMade()" placeholder="English Title" required="required">
                 </div>
               </div>
               <div class="col-md-1"></div>
               <div class="col-md-5">
                 <div class="input-group">
                   <span class="input-group-addon">FR</span>
-                  <input class="form-control" type="text" ng-model="email.name_FR" ng-change="setChangesMade()" placeholder="Titre Français" required="required">
+                  <input class="form-control" type="text" ng-model="email.subject_FR" ng-change="setChangesMade()" placeholder="Titre Français" required="required">
                 </div>
               </div>
             </div>
@@ -107,7 +107,7 @@
           <div uib-accordion-group is-open="statusB.open">
             <uib-accordion-heading>
               <div>
-                Messages <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusB.open, 'glyphicon-chevron-right': !statusB.open}"></i>
+                <strong>Messages</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusB.open, 'glyphicon-chevron-right': !statusB.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="row">
