--- a/templates/patient.html
+++ b/templates/patient.html
@@ -67,7 +67,7 @@
           <div uib-accordion-group is-open="true">
             <uib-accordion-heading>
               <div>
-                Change Password <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusA.open, 'glyphicon-chevron-right': !statusA.open}"></i>
+                <strong>Change Password </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusA.open, 'glyphicon-chevron-right': !statusA.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="row form-horizontal">
