--- a/templates/post.html
+++ b/templates/post.html
@@ -86,7 +86,7 @@
           <div uib-accordion-group is-open="statusA.open">
             <uib-accordion-heading>
               <div>
-                Titles <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusA.open, 'glyphicon-chevron-right': !statusA.open}"></i>
+                <strong>Titles </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusA.open, 'glyphicon-chevron-right': !statusA.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
@@ -112,7 +112,7 @@
           <div uib-accordion-group is-open="statusB.open">
             <uib-accordion-heading>
               <div>
-                Body <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusB.open, 'glyphicon-chevron-right': !statusB.open}"></i>
+                <strong>Body </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusB.open, 'glyphicon-chevron-right': !statusB.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="row">
@@ -158,7 +158,7 @@
           <div uib-accordion-group is-open="statusC.open" ng-show="post.type == 'Announcement'">
             <uib-accordion-heading>
               <div>
-                Publish Date <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusC.open, 'glyphicon-chevron-right': !statusC.open}"></i>
+                <strong>Publish Date </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusC.open, 'glyphicon-chevron-right': !statusC.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
@@ -189,7 +189,7 @@
           <div uib-accordion-group is-open="statusD.open">
             <uib-accordion-heading>
               <div>
-                Filter Terms <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusD.open, 'glyphicon-chevron-right': !statusD.open}"></i>
+                <strong>Filter Terms </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusD.open, 'glyphicon-chevron-right': !statusD.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
@@ -226,7 +226,7 @@
           <div uib-accordion-group is-open="statusE.open">
             <uib-accordion-heading>
               <div>
-                Filter Diagnoses <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusE.open, 'glyphicon-chevron-right': !statusE.open}"></i>
+                <strong>Filter Diagnoses </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusE.open, 'glyphicon-chevron-right': !statusE.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
@@ -263,7 +263,7 @@
           <div uib-accordion-group is-open="statusF.open">
             <uib-accordion-heading>
               <div>
-                Filter Doctors <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusF.open, 'glyphicon-chevron-right': !statusF.open}"></i>
+                <strong>Filter Doctors </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusF.open, 'glyphicon-chevron-right': !statusF.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
@@ -300,7 +300,7 @@
           <div uib-accordion-group is-open="statusG.open">
             <uib-accordion-heading>
               <div>
-                Filter Resources <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusG.open, 'glyphicon-chevron-right': !statusG.open}"></i>
+                <strong>Filter Resources </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusG.open, 'glyphicon-chevron-right': !statusG.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
