--- a/templates/add-alias.html
+++ b/templates/add-alias.html
@@ -12,24 +12,23 @@
                   <h1 class="animated fadeIn">opal <strong>ADMIN</strong> <span style="font-size: 20px;" ng-if="devMode">DEV</span></h1>
                 </div>
               </div>   
-            </div>
-            <div class="summary-fix">
-							<div class="row side-panel-menu">
-								<div class="col-md-12">
-									<div class="panel-container animated" ng-class="{pulse: hoverBack}" ng-mouseenter="hoverBack=true" ng-mouseleave="hoverBack=false" style="cursor:pointer;" ng-click="goBack()">
-										<div class="side-panel-info-sm">
-											<div class="panel-content">
-												<span style="font-size: 23px;vertical-align:middle" class="fa fa-arrow-left" aria-hidden="true"></span>
-												<h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Back to Tasks / Appts / Documents</strong></h6>
-											</div>
+						</div>
+						<div class="row side-panel-menu">
+							<div class="col-md-12">
+								<div class="panel-container animated" ng-class="{pulse: hoverBack}" ng-mouseenter="hoverBack=true" ng-mouseleave="hoverBack=false" style="cursor:pointer;" ng-click="goBack()">
+									<div class="side-panel-info-sm">
+										<div class="panel-content">
+											<span style="font-size: 23px;vertical-align:middle" class="fa fa-arrow-left" aria-hidden="true"></span>
+											<h6 class="side-panel-title" style="display:inline-block;margin:0;font-size:14px;"><strong>Back to Tasks/Appts/Documents</strong></h6>
 										</div>
 									</div>
 								</div>
 							</div>
-			
+						</div>
+            <div class="summary-fix">
               <div class="row">
                 <div class="side-menu-title">
-                  <div class="horz-line" style="height: 10px; text-align: center">
+                  <div class="horz-line" style="height: 16px; text-align: center">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <h2>Summary</h2>
                     </span>  
