--- Fixed issue where alias educational material was not auto filled in list
--- Fixed missing filter display upon completing TOC section on new educational material

--- Fixed missing filter list on educational material edit

--- Fixed deprecated "go back" button call on questionnaire add

--- Fixed issue where email list wasn't showing up on email page

--- a/templates/alias.html
+++ b/templates/alias.html
@@ -184,7 +184,7 @@
               <ul class="list-items">
                 <li ng-repeat="eduMat in eduMatList | filter: searchEduMatsFilter">
                   <label>
-                    <input type="radio" ng-model="alias.eduMat" ng-change="eduMatUpdate()" ng-value="eduMat" /> {{eduMat.name_EN}}
+                    <input type="radio" ng-model="alias.eduMat" ng-change="eduMatUpdate()" ng-checked="alias.eduMat.serial == eduMat.serial" ng-value="eduMat" /> {{eduMat.name_EN}}
                   </label>
                 </li>
               </ul>
