--- a/templates/questionnaire-side-menu.html
+++ b/templates/questionnaire-side-menu.html
@@ -40,7 +40,7 @@
     <!-- Manage questionnaire -->
     <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">   
       <div class="panel-container animated" ng-class="{pulse: hoverManageQuestionnaires, active: currentPage == 'questionnaire'}" ng-mouseenter="hoverManageQuestionnaires=true" ng-mouseleave="hoverManageQuestionnaires=false" style="cursor:pointer;" ng-click="goToQuestionnaire()">
-        <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire/manage'}">
+        <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire'}">
           <div class="panel-content">
             <span style="font-size: 23px;vertical-align:middle" class="fa fa-pencil" aria-hidden="true"></span>
             <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Manage Questionnaires</strong></h6>
@@ -51,7 +51,7 @@
     <!-- Manage questions -->
     <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">   
       <div class="panel-container animated" ng-class="{pulse: hoverManageQuestions, active: currentPage == 'questionnaire/question'}" ng-mouseenter="hoverManageQuestions=true" ng-mouseleave="hoverManageQuestions=false" style="cursor:pointer;" ng-click="goToQuestionnaireQuestionBank()">
-        <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire/bank'}">
+        <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire/question'}">
           <div class="panel-content">
             <span style="font-size: 23px;vertical-align:middle" class="fa fa-search" aria-hidden="true"></span>
             <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Manage Questions</strong></h6>
