--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -97,7 +97,7 @@
                 <!-- SECTION: Questionnaires -->
   			        <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
                   <div class="panel-container animated" ng-class="{pulse: hoverQuestionnaireMenu, active: currentPage == 'questionnaire/menu'}" ng-mouseenter="hoverQuestionnaireMenu=true" ng-mouseleave="hoverQuestionnaireMenu=false" style="cursor:pointer;" ng-click="goToQuestionnaireMainMenu()">
-                    <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire'}">
+                    <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire/menu'}">
                       <div class="panel-content">
                         <span style="font-size: 21px; vertical-align:middle" class="fa fa-pencil-square-o" aria-hidden="true"></span>
                         <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Questionnaires</strong></div>
