--- a/templates/test-result.html
+++ b/templates/test-result.html
@@ -9,13 +9,13 @@
           <!-- Right side detail view -->
           <div class="col-md-10 animated fadeIn">
             <div class="row main-title">
-              <!-- Page title --> 
+              <!-- Page title -->
               <div class="col-md-8 title-content">
                 <span class="fa fa-heartbeat"></span>
                 <h1><strong>Test Results</strong></h1>
               </div>
               <!-- Breadcrumbs -->
-              <div class="col-md-4 title-breadcrumbs"> 
+              <div class="col-md-4 title-breadcrumbs">
                 <span><a href="#/">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Test Results</strong></span>
               </div>
             </div>
@@ -62,7 +62,7 @@
   <script type="text/ng-template" id="deleteTestResultModalContent.htm">
       <div class="modal-header">
         <h2 class="modal-title">
-          <span class="glyphicon glyphicon-trash" style="font-size: 30px;"></span> 
+          <span class="glyphicon glyphicon-trash" style="font-size: 30px;"></span>
           Delete Test Result: {{testResultToDelete.name_EN}} / {{testResultToDelete.name_FR}}
         </h2>
       </div>
@@ -70,7 +70,7 @@
         <div class="bs-callout bs-callout-danger">
           <h4>Test Result Delete</h4>
           <p class="deleteText">Are you sure you want to delete the Test Result "{{testResultToDelete.name_EN}}" ?</p>
-          <form method="post" ng-submit="deleteTestResult()">			
+          <form method="post" ng-submit="deleteTestResult()">
             <input class="btn btn-primary" type="submit" value="Delete">
             <input ng-click="cancel()" class="btn btn-danger" type="button" value="Cancel">
           </form>
@@ -83,19 +83,19 @@
       <!-- Modal title -->
       <div class="modal-header">
         <h2 class="modal-title">
-          <span class="glyphicon glyphicon-pencil" style="font-size: 30px;"></span> 
+          <span class="glyphicon glyphicon-pencil" style="font-size: 30px;"></span>
           Edit Test Result: {{testResult.name_EN}} / {{testResult.name_FR}}
-          <span style="float:right;"> 
+          <span style="float:right;">
             <form method="post" ng-submit="updateTestResult()">
               <input class="btn btn-primary" ng-class="{'disabled': !checkForm()}" type="submit" value="Save Changes">
               <input ng-click="cancel()" class="btn btn-danger" type="button" value="Cancel">
             </form>
-          </span>      
+          </span>
         </h2>
       </div>
       <div class="modal-body">
         <uib-accordion>
-          
+
           <!-- SECTION: Test names -->
           <div uib-accordion-group is-open="statusTestResult.open">
             <uib-accordion-heading>
@@ -169,12 +169,12 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
-                  <textarea class="form-control" rows="10" ng-model="testResult.description_EN" ng-change="descriptionUpdate()" placeholder="English Description" required="required"></textarea>
+                  <textarea class="form-control" rows="10" ng-model="testResult.description_EN" ng-change="setChangesMade()" placeholder="English Description" required="required"></textarea>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <textarea class="form-control" rows="10" ng-model="testResult.description_FR" ng-change="descriptionUpdate()" placeholder="Description Francais" required="required"></textarea>
+                  <textarea class="form-control" rows="10" ng-model="testResult.description_FR" ng-change="setChangesMade()" placeholder="Description Francais" required="required"></textarea>
                 </div>
               </div>
             </div>
@@ -195,14 +195,14 @@
               <div class="col-md-5">
                 <div class="input-group">
                   <span class="input-group-addon">EN</span>
-                  <input class="form-control" type="text" ng-model="testResult.group_EN" ng-change="setChangesMade()" typeahead-on-select="setChangesMade()" uib-typeahead="group for group in TestResultGroups_EN | filter:$viewValue" typeahead-min-length="0" placeholder="English" required="required"> 
+                  <input class="form-control" type="text" ng-model="testResult.group_EN" ng-change="setChangesMade()" typeahead-on-select="setChangesMade()" uib-typeahead="group for group in TestResultGroups_EN | filter:$viewValue" typeahead-min-length="0" placeholder="English" required="required">
                 </div>
               </div>
               <div class="col-md-1"></div>
               <div class="col-md-5">
                 <div class="input-group">
                   <span class="input-group-addon">FR</span>
-                  <input class="form-control" type="text" ng-model="testResult.group_FR" ng-change="setChangesMade()" typeahead-on-select="setChangesMade()" uib-typeahead="group for group in TestResultGroups_FR | filter:$viewValue" typeahead-min-length="0" placeholder="Francais" required="required"> 
+                  <input class="form-control" type="text" ng-model="testResult.group_FR" ng-change="setChangesMade()" typeahead-on-select="setChangesMade()" uib-typeahead="group for group in TestResultGroups_FR | filter:$viewValue" typeahead-min-length="0" placeholder="Francais" required="required">
                 </div>
               </div>
             </div>
@@ -218,9 +218,7 @@
   </div>
   <div class="modal-body">
     <div class="progress progress-striped active">
-      <div class="progress-bar" style="width: 100%"></div>        
+      <div class="progress-bar" style="width: 100%"></div>
     </div>
   </div>
 </script>
-
-
