-- remove ng-change=“usernameUpdate()” on line 572 and ng-change=“passwordUpdate()” on line 584 because it is no longer required.

--- a/templates/install.html
+++ b/templates/install.html
@@ -13,17 +13,17 @@
                   </div>
                   <h1 class="animated fadeIn">opal <strong>ADMIN</strong> <span style="font-size: 20px;" ng-if="devMode">DEV</span></h1>
                 </div>
-              </div>   
-            </div> 
+              </div>
+            </div>
             <!-- Summary -->
-            <div class="summary-fix"> 
+            <div class="summary-fix">
               <div class="row">
                 <div class="side-menu-title">
                   <div class="horz-line" style="height: 16px; text-align: center">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <h2>Summary</h2>
-                    </span>  
-                  </div>  
+                    </span>
+                  </div>
                 </div>
               </div>
               <div class="row">
@@ -139,8 +139,8 @@
                   <span style="background-color:#e6edfa; padding: 0 10px;">
                     <span class="glyphicon glyphicon-menu-down"></span>
                     <h2>Verify Requirements</h2>
-                  </span>  
-                </div>  
+                  </span>
+                </div>
               </div>
             </div>
             <div class="row">
@@ -188,7 +188,7 @@
                       </div>
                     </div>
                   </li>
-                </ul> 
+                </ul>
               </div>
             </div>
 
@@ -199,10 +199,10 @@
                   <span style="background-color:#e6edfa; padding: 0 10px;">
                     <span class="glyphicon glyphicon-menu-down"></span>
                     <h2>Opal Database Setup</h2>
-                  </span>  
-                </div>  
+                  </span>
+                </div>
               </div>
-            </div>   
+            </div>
             <div class="row" ng-if="installation.requirements">
               <div class="col-md-10">
                 <p style="margin-bottom: 10px;">
@@ -211,7 +211,7 @@
                 </p>
               </div>
             </div>
-            <div class="row" ng-if="installation.requirements"> 
+            <div class="row" ng-if="installation.requirements">
               <div class="col-md-6">
                 <div class="panel" ng-class="installation.opal_setup ? 'panel-success': 'panel-danger'">
                   <div class="panel-heading"><strong>Opal Database</strong>
@@ -226,7 +226,7 @@
                       <div class="col-md-9">
                         <input class="form-control" type="text" ng-model="opal_setup.host" placeholder="IP Address" required="required">
                       </div>
-                    </div>    
+                    </div>
                     <div class="form-group">
                       <label class="control-label col-md-3">
                         Database Port
@@ -274,7 +274,7 @@
                     </div>
                   </div>
                 </div>
-              </div>   
+              </div>
             </div>
 
             <!-- SECTION: Clinical database setup -->
@@ -284,10 +284,10 @@
                   <span style="background-color:#e6edfa; padding: 0 10px;">
                     <span class="glyphicon glyphicon-menu-down"></span>
                     <h2>Clinical Database Setup</h2>
-                  </span>  
-                </div>  
+                  </span>
+                </div>
               </div>
-            </div>   
+            </div>
             <div class="row" ng-if="installation.opal_setup">
               <div class="col-md-10">
                 <p style="margin-bottom: 10px;">
@@ -295,10 +295,10 @@
                   Please choose one or more clinical databases to setup.
                 </p>
               </div>
-            </div>  
+            </div>
             <div class="row" ng-if="installation.opal_setup">
               <div class="col-md-12">
-                <div ng-repeat="sourceDB in sourceDBList" class="col-md-1"> 
+                <div ng-repeat="sourceDB in sourceDBList" class="col-md-1">
                   <div class="panel-container animated" style="cursor:pointer;" ng-class="{pulse: hover, active: sourceDB.selected}" ng-click="sourceDB.selected = !sourceDB.selected" ng-mouseenter="hover=true" ng-mouseleave="hover=false">
                     <div class="panel-info" ng-class="{active: sourceDB.selected}">
                       <div class="panel-content" style="text-align:center">
@@ -311,7 +311,7 @@
               </div>
             </div>
             <!-- ARIA HOST -->
-            <div ng-if="sourceDBList[0].selected" class="row"> 
+            <div ng-if="sourceDBList[0].selected" class="row">
               <div class="col-md-6">
                 <div class="panel" ng-class="clinical_setup.aria.status ? 'panel-success': 'panel-danger'">
                   <div class="panel-heading"><strong>ARIA - Credentials</strong>
@@ -326,7 +326,7 @@
                       <div class="col-md-9">
                         <input class="form-control" type="text" ng-model="clinical_setup.aria.host" placeholder="IP Address" required="required">
                       </div>
-                    </div>  
+                    </div>
                     <div class="form-group">
                       <label class="control-label col-md-3">
                         Aria Port
@@ -334,7 +334,7 @@
                       <div class="col-md-9">
                         <input class="form-control" type="number" ng-model="clinical_setup.aria.port" placeholder="Port Number" required="required">
                       </div>
-                    </div>  
+                    </div>
                     <div class="form-group">
                       <label class="control-label col-md-3">
                         Aria Username
@@ -374,10 +374,10 @@
                     </div>
                   </div>
                 </div>
-              </div>   
+              </div>
             </div>
             <!-- MEDIVISIT HOST -->
-            <div ng-if="sourceDBList[1].selected" class="row"> 
+            <div ng-if="sourceDBList[1].selected" class="row">
               <div class="col-md-6">
                 <div class="panel" ng-class="clinical_setup.medivisit.status ? 'panel-success': 'panel-danger'">
                   <div class="panel-heading"><strong>MediVisit - Credentials</strong>
@@ -392,7 +392,7 @@
                       <div class="col-md-9">
                         <input class="form-control" type="text" ng-model="clinical_setup.medivisit.host" placeholder="IP Address" required="required">
                       </div>
-                    </div>  
+                    </div>
                     <div class="form-group">
                       <label class="control-label col-md-3">
                         MediVisit Port
@@ -400,7 +400,7 @@
                       <div class="col-md-9">
                         <input class="form-control" type="number" ng-model="clinical_setup.medivisit.port" placeholder="Port Number" required="required">
                       </div>
-                    </div>  
+                    </div>
                     <div class="form-group">
                       <label class="control-label col-md-3">
                         MediVisit Name
@@ -408,7 +408,7 @@
                       <div class="col-md-9">
                         <input class="form-control" type="text" ng-model="clinical_setup.medivisit.name" placeholder="Name" required="required">
                       </div>
-                    </div>  
+                    </div>
                     <div class="form-group">
                       <label class="control-label col-md-3">
                         MediVisit Username
@@ -440,10 +440,10 @@
                     </div>
                   </div>
                 </div>
-              </div>   
+              </div>
             </div>
             <!-- MOSAIQ HOST -->
-            <div ng-if="sourceDBList[2].selected" class="row"> 
+            <div ng-if="sourceDBList[2].selected" class="row">
               <div class="col-md-6">
                 <div class="panel" ng-class="clinical_setup.mosaiq.status ? 'panel-success': 'panel-danger'">
                   <div class="panel-heading"><strong>Mosaiq - Credentials</strong>
@@ -458,7 +458,7 @@
                       <div class="col-md-9">
                         <input class="form-control" type="text" ng-model="clinical_setup.mosaiq.host" placeholder="IP Address" required="required">
                       </div>
-                    </div>  
+                    </div>
                     <div class="form-group">
                       <label class="control-label col-md-3">
                         Mosaiq Port
@@ -466,7 +466,7 @@
                       <div class="col-md-9">
                         <input class="form-control" type="number" ng-model="clinical_setup.mosaiq.port" placeholder="Port Number" required="required">
                       </div>
-                    </div>   
+                    </div>
                     <div class="form-group">
                       <label class="control-label col-md-3">
                         Mosaiq Username
@@ -506,7 +506,7 @@
                     </div>
                   </div>
                 </div>
-              </div>   
+              </div>
             </div>
 
             <!-- SECTION: Set configurations -->
@@ -516,17 +516,17 @@
                   <span style="background-color:#e6edfa; padding: 0 10px;">
                     <span class="glyphicon glyphicon-menu-down"></span>
                     <h2>Set Configurations</h2>
-                  </span>  
-                </div>  
+                  </span>
+                </div>
               </div>
-            </div>   
+            </div>
             <div class="row" ng-if="installation.clinical_setup">
               <div class="col-md-6">
                 <p style="margin-bottom: 10px; font-size: 19px;" >
                   At this point, the above credentials will be written to the configuration files. Please make sure the credentials are correct. Incorrect credentials (i.e. failed connections) will not be written. To confirm these configurations, click "Submit Configurations" below.
                 </p>
               </div>
-            </div>  
+            </div>
             <div class="row" style="margin-bottom: 15px;" ng-if="installation.clinical_setup">
               <div class="col-md-2">
                 <button class="btn btn-primary" ng-click="submitConfigurations()">Submit Configurations</button>
@@ -543,10 +543,10 @@
                   <span style="background-color:#e6edfa; padding: 0 10px;">
                     <span class="glyphicon glyphicon-menu-down"></span>
                     <h2>Site Account</h2>
-                  </span>  
-                </div>  
+                  </span>
+                </div>
               </div>
-            </div>   
+            </div>
             <div class="row" ng-if="installation.config_files">
               <div class="col-md-10">
                 <p style="margin-bottom: 10px;">
@@ -556,7 +556,7 @@
               </div>
             </div>
 
-            <div class="row" ng-if="installation.config_files"> 
+            <div class="row" ng-if="installation.config_files">
               <div class="col-md-8">
                 <div class="panel" ng-class="adminUser.status ? 'panel-success': 'panel-danger'">
                   <div class="panel-heading"><strong>Admin User</strong>
@@ -569,7 +569,7 @@
                         Username
                       </label>
                       <div class="col-md-7">
-                        <input type="text" class="form-control" required="required" ng-blur="validateUsername(adminUser.username)" ng-change="usernameUpdate()" ng-model="adminUser.username">
+                        <input type="text" class="form-control" required="required" ng-blur="validateUsername(adminUser.username)" ng-model="adminUser.username">
                         <span ng-show="validUsername.status" class="glyphicon form-control-feedback" ng-class="{'glyphicon-ok': validUsername.status == 'valid', 'glyphicon-remove': validUsername.status == 'invalid', 'glyphicon-warning-sign': validUsername.status == 'warning'}" aria-hidden="true"></span>
                       </div>
                       <em class="control-label col-md-3" ng-show="validUsername.status == 'invalid' || validUsername.status == 'warning'" ng-class="{'has-success': validUsername.status == 'valid', 'has-error': validUsername.status == 'invalid', 'has-warning': validUsername.status == 'warning'}" style="text-align:left;">
@@ -581,13 +581,13 @@
                         Password <br><em><small>(min: 6 characters)</small></em>
                       </label>
                       <div class="col-md-7">
-                        <input type="password" class="form-control" required="required" ng-blur="validatePassword(adminUser.password)" ng-change="passwordUpdate()" ng-model="adminUser.password">
+                        <input type="password" class="form-control" required="required" ng-blur="validatePassword(adminUser.password)" ng-model="adminUser.password">
                         <span ng-show="validPassword.status" class="glyphicon form-control-feedback" ng-class="{'glyphicon-ok': validPassword.status == 'valid', 'glyphicon-remove': validPassword.status == 'invalid', 'glyphicon-warning-sign': validPassword.status == 'warning'}" aria-hidden="true"></span>
                       </div>
                       <em class="control-label col-md-3" ng-show="validPassword.status == 'invalid' || validPassword.status == 'warning'" ng-class="{'has-success': validPassword.status == 'valid', 'has-error': validPassword.status == 'invalid', 'has-warning': validPassword.status == 'warning'}" style="text-align:left">
                         {{validPassword.message}}
                       </em>
-                    </div>    
+                    </div>
                     <div class="form-group has-feedback" ng-class="{'has-success': validConfirmPassword.status == 'valid', 'has-error': validConfirmPassword.status == 'invalid', 'has-warning': validConfirmPassword.status == 'warning'}">
                       <label class="control-label col-md-2">
                         Re-type Password
@@ -615,7 +615,7 @@
                     </div>
                   </div>
                 </div>
-              </div>          
+              </div>
             </div>
             <!-- END SECTION -->
 
@@ -624,4 +624,3 @@
       </div>
     </div>
   </div>
-
