--- a/templates/home.html
+++ b/templates/home.html
@@ -176,6 +176,26 @@
 									</div>
 								</div>
 							</div> 
+
+							 <!-- SECTION: Legacy Questionnaire -->
+							<div class="col-md-6">
+								<div class="panel-container animated" ng-class="{pulse: hoverLegacyQuestionnaireMenu}" ng-mouseenter="hoverLegacyQuestionnaireMenu=true" ng-mouseleave="hoverLegacyQuestionnaireMenu=false" style="cursor:pointer;" ng-click="goToLegacyQuestionnaire()">
+									<div class="panel-info" style="height: 180px;">
+										<div class="panel-content">
+											<div class="icon-home clearfix">
+												<span style="font-size: 50px;" class="fa fa-pencil-square" aria-hidden="true"></span>     
+											</div>
+											<div class="panel-title">  
+												<h1>Legacy Questionnaires</h1>
+											</div>  
+											<div class="panel-description">
+												<p>Manage the lagacy version of the patient-reported outcome questionnaires.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div> 
+
 						</div>
           </div>
 
