--- a/templates/legacy-questionnaire-add.html
+++ b/templates/legacy-questionnaire-add.html
@@ -98,6 +98,36 @@
                     </p>
                   </div>
                 </div>
+                <!-- SECTION: Demographic filter -->
+                <div uib-accordion-group is-open="demo.open" class="panel-container summary-box animated" ng-class="{fadeInUp:demo.open}" is-disabled="!demoFilter.sex && demoFilter.age.min == 0 && demoFilter.age.max == 100" ng-if="demo.show">
+                  <uib-accordion-heading>
+                    <div class="row" style="align-items: center">
+                      <div class="col-md-2">
+                        <span ng-if="demoFilter.sex || demoFilter.age.min != 0 || demoFilter.age.max != 100" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
+                      </div>
+                      <div class="col-md-8">
+                        <strong>Demographic Filter(s)</strong>
+                      </div>
+                      <div class="col-md-2">
+                        <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down':demo.open, 'glyphicon-chevron-right':!demo.open}" ng-if="demoFilter.sex || demoFilter.age.min != 0 || demoFilter.age.max != 100"></i>
+                      </div>
+                    </div>
+                  </uib-accordion-heading>
+                  <div ng-if="demoFilter.sex" class="description">
+                    <p>
+                      <strong>Sex</strong>
+                      <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
+                      {{demoFilter.sex}}
+                    </p>
+                  </div>
+                  <div ng-if="demoFilter.age.min != 0 || demoFilter.age.max != 100" class="description">
+                    <p>
+                      <strong>Age Group</strong>
+                      <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
+                      {{demoFilter.age.min}} to {{demoFilter.age.max}} 
+                    </p>
+                  </div>
+                </div>
                 <!-- SECTION: Expression filters -->
                 <div uib-accordion-group is-open="terms.open" class="panel-container summary-box animated" ng-class="{fadeInUp:terms.show}" is-disabled="!checkFilters(termList)" ng-if="terms.show">
                   <uib-accordion-heading>
@@ -324,6 +354,78 @@
                       <div class="col-md-10">
                         <div class="form-group">
                           <input class="form-control" type="text" ng-model="newLegacyQuestionnaire.name_FR" ng-change="titleUpdate()" placeholder="Titre Français" required="required">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>        
+            </div>
+            <!-- SECTION: Demographic filters -->
+            <div class="row animated" ng-class="{fadeInUp:demo.show}" ng-if="demo.show">
+              <div class="col-md-12 side-menu-title">
+                <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
+                  <span style="background-color:#e6edfa; padding: 0 10px;">
+                    <span class="fa fa-dot-circle-o"></span>
+                    <h2>Demographic Filters</h2>
+                  </span>  
+                </div>  
+              </div>
+            </div>   
+            <div class="row animated" ng-class="{fadeInUp:demo.show}" ng-if="demo.show">
+              <div class="col-md-12">
+                <p style="margin-bottom: 10px;">
+                  <span><strong>Optional field:</strong></span>
+                  Please assign a demographic filter. Leave unmarked for no filter.
+                </p>
+              </div>
+            </div>  
+            <div class="row animated" ng-class="{fadeInUp:demo.show}" ng-if="demo.show">
+              <div class="col-md-6">
+                <h2 style="margin:0 0 7px 0; padding: 0 15px; font-size:30px;">Sex</h2>
+              </div>  
+              <div class="row">
+                <h2 style="margin:0 0 7px 0; padding: 0 15px; font-size:30px;">Age Group</h2>
+              </div>
+            </div>
+            <div class="row animated" ng-class="{fadeInUp:demo.show}" ng-if="demo.show">
+              <div ng-repeat="sex in sexes" class="col-md-2">
+                <div class="panel-container animated" style="cursor:pointer;" ng-class="{pulse: hover, active: demoFilter.sex == sex.name}" ng-click="sexUpdate(sex)" ng-mouseenter="hover=true" ng-mouseleave="hover=false">
+                  <div class="panel-info" ng-class="{active: demoFilter.sex == sex.name}">
+                    <div class="panel-content" style="text-align:center">
+                      <span style="font-size:30px;" class="fa fa-{{sex.icon}}"></span>
+                      <div class="option-panel-title">{{sex.name}}</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-1"></div>
+              <div class="col-md-3">
+                <div class="panel">
+                  <div class="panel-body">
+                    <div class="row">
+                      <div class="col-md-2">
+                        <div style="font-size:16px; text-align:right;">MIN</div>
+                      </div>
+                      <div class="col-md-10">
+                        <div class="form-group" style="margin-bottom:0px;">
+                          <input class="form-control" ng-model="demoFilter.age.min" type="number" ng-change="ageUpdate()" ng-max="demoFilter.age.max" min="0">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>          
+              <div class="col-md-3">
+                <div class="panel">
+                  <div class="panel-body">
+                    <div class="row">
+                      <div class="col-md-2">
+                        <div style="font-size:16px; text-align:right;">MAX</div>
+                      </div>
+                      <div class="col-md-10">
+                        <div class="form-group" style="margin-bottom:0px;">
+                          <input class="form-control" ng-model="demoFilter.age.max" type="number" ng-change="ageUpdate()" max="100" ng-min="demoFilter.age.min">
                         </div>
                       </div>
                     </div>
